--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,9 @@ nav ul{
     justify-content: space-between;
     margin: 0 35px 0 200px;
 }
+.banner-profile-pic{
+     width: 580px;
+}
 .banner-content{
     max-width: 580px;
 }
@@ -184,4 +187,46 @@ footer input[type="text"] , footer input[type="email"],footer textarea{
     padding: 10px 20px;
     margin-bottom: 24px;
     border: none;
+}
+
+
+/* responsive media query */
+.hide{
+    display: none;
+}
+
+@media screen and (max-width:576px) {
+   .skills-container,
+   .resume-container, 
+     nav,
+     nav>ul,
+    footer,
+    .banner,
+    .about-items{
+    flex-direction: column;
+   }
+   nav>ul{
+    gap: 20px;
+   }
+   footer, .about{
+    padding: 20px;
+   }
+   .banner{
+    margin: 20px;
+   }
+   .banner-profile-pic{ 
+     width: 100%;
+}
+   .header{
+    background-image: none;
+   }
+   .btn-primary{
+    margin-bottom: 20px;
+   }
+   .footer-column{
+    width: 100%;
+   }
+   footer input[type="text"] , footer input[type="email"],footer textarea{
+    width: calc(100% - 40px);
+   }
 }
